# Labor_union

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGES_UI_CHANG.md  CONTRIBUTING.md  Dockerfile  LINE_Bot_SOP.md  README.md  docker-compose.yml  main.py  online.bat  pyproject.toml  requirements.txt  start.bat  start_line_bot.py  system_map.md  system_map.yaml  test.md  欄位.xlsx  欄位_測試用.xlsx  系統設計規格書.md  軟體需求規格書.md
.agents/: AGENTS.md
.github/: pull_request_template.md
admin/: app.py  settings_manager.py  utils.py
api/: api_system_map.md  api_system_map.yaml  main.py
config/: README_CONFIG.md  customer_service.json  liff_settings.json  line_menu.json  message_schedules.json  message_templates.json  rich_menu_ids.json  webhook_replies.json
db/: create_readonly_user.sql  form_templates.json  schema.sql
docs/: line_stage4_4_5_report.md
document/: ADAD Task 快照 v2→v3 相容性遷移規格.md  LINE (1).pptx  MCP+Agent.md  月子媒合流程圖.canvas  畫圖測試.md  自動化系統設計規格書(總覽).md  規格書缺漏分析報告.md  許願清單.md
history/: git_push.md
line/: LINE_Bot_SOP.md  line_bot.py  main.py  refactor_main.py  refactor_main_2.py  security.py  setup_rich_menus.py  start_line_bot.bat  start_line_bot.py  test_result.txt  worker.py
scratch/: adad_full_audit.py  audit_payment_dates.py  audit_priority_tasks.py  backup_system_map_v49.md  backup_system_map_v49.yaml  backup_ui_system_map_v49.md  backup_ui_system_map_v49.yaml  check_sheets.py  clean_syntax.py  columns.json  excel_report.txt  fix_indentation.py  inspect_db_json.py  new_columns.json  order_system_utf8.csv  test_api.py  (+18 more)
(+267 files in other folders)
