[project]
name = "union"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "playwright>=1.60.0",
    "pymysql>=1.1.1",
    "openpyxl>=3.1.5",
    "watchdog>=6.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "streamlit>=1.38.0",
    "chromadb>=0.5.5",
    "requests>=2.32.3",
    "pydantic>=2.0.0",
]
